# AlarmClock

./: .gitignore  Cargo.toml  LICENSE.md  README.md  deny.toml  docAlarmClock.html  install.sh
ser/: alarms.json
src/: controllermod.rs  main.rs  model.rs  modelmod.rs  musicmod.rs  view.rs  viewmod.rs  widgetmod.rs
style/: styleapp.css
