[package]
name = "rust_first"
version = "0.1.0"
edition = "2021"
autor = "Benjamin PELLIEUX (benjaminpellieux5@gmail.com)"

[dependencies]
gtk = "0.18.1"
gio = "0.19.8"
chrono = "0.4.38"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
gstreamer = "0.17"
gstreamer-audio = "0.17"
gstreamer-player = "0.17"
reqwest = { version = "0.11", features = ["blocking","json"] }
tokio = { version = "1", features = ["full"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
futures = { version="0", features=["executor"]} 
rodio = "0.15"
